# libpam-web3-ergo

./: Cargo.toml  README.md  config.example.toml  dependencies.json  package.json  web3-auth-svc.service
auth-svc-src/: index.ts  schnorr.test.ts  schnorr.ts
docs/: 2026-03-29-libpam-web3-ergo-plan.md
packaging/: build-deb.sh
signing-page/: engine.js  generate.sh  index.html  template.html
src/: main.rs
