[package]
name = "libpam-web3-ergo"
version = "0.1.0"
edition = "2021"
description = "Ergo verification plugin for libpam-web3"
license = "MIT"

[[bin]]
name = "ergo"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Address derivation
blake2 = "0.10"
bs58 = "0.5"
hex = "0.4"
